fix work_js_item_filter wrong position

--- a/src/components/work/WorkJsItem.module.css
+++ b/src/components/work/WorkJsItem.module.css
@@ -34,6 +34,7 @@
   height: 100%;
   position: absolute;
   top: 0;
+  left: 0;
   transition: all 0.25s;
   opacity: 0;
   display: grid;
